新增直播间创建接口，更新相关路由和Swagger文档，添加认证中间件
